include/Win64/Physics.ODEImport.hpp

struct TdxBody;
struct TdxWorld;
struct TdGeomClass;
struct TdxTriMeshData;
struct TdxHeightfieldData;
struct TdxGeom;
struct TdxSpace;
typedef float TdReal;
typedef float *PdReal;
typedef TdxJointGroup *PdxJointGroup;
typedef PdxJointGroup TdJointGroupID;
typedef System::StaticArray<float, 4> TdVector3;
typedef TdVector3 *PdVector3;
typedef System::StaticArray<float, 4> TdVector4;
typedef System::StaticArray<float, 12> TdMatrix3;
typedef TdMatrix3 *PdMatrix3;
typedef TdVector4 TdQuaternion;
typedef System::StaticArray<float, 6> TdAABB;
typedef TdxGeom *PdxGeom;
typedef int __fastcall (*TdTriCallback)(PdxGeom TriMesh, PdxGeom RefObject, int TriangleIndex);
typedef void __fastcall (*TdTriArrayCallback)(PdxGeom TriMesh, PdxGeom RefObject, System::PIntegerArray TriIndices, int TriCount);
typedef int __fastcall (*TdTriRayCallback)(PdxGeom TriMesh, PdxGeom Ray, int TriangleIndex, float u, float v);
typedef TdxWorld *PdxWorld;
typedef TdxBody *PdxBody;
typedef TdxJoint *PdxJoint;
typedef PdxJoint TdJointID;
struct DECLSPEC_DRECORD TdxBody
{
public:
	TdObject baseObject;
	System::Byte Padding;
	TdxJoint *firstjoint;
	int flags;
	TdxGeom *geom;
	TdMass mass;
	TdMatrix3 invI;
	float invMass;
	TdxPosR posr;
	TdVector4 q;
	TdVector3 lvel;
	TdVector3 avel;
	TdVector3 facc;
	TdVector3 tacc;
	TdVector3 finite_rot_axis;
	TdxAutoDisable adis;
	float adis_timeleft;
	int adis_stepsleft;
	TdVector3 *average_lvel_buffer;
	TdVector3 *average_avel_buffer;
	unsigned average_counter;
	int average_ready;
	TdMovedCallback moved_callback;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};
struct DECLSPEC_DRECORD TdxWorld
{
public:
	TdxBody *firstbody;
	TdxJoint *firstjoint;
	int nb;
	int nj;
	TdVector3 gravity;
	float global_erp;
	float global_cfm;
	TdxAutoDisable adis;
	int body_flags;
	TdxQuickStepParameters qs;
	TdxContactParameters contactp;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};
typedef TdColliderFn __cdecl (*TdGetColliderFnFn)(int num);
typedef void __cdecl (*TdGetAABBFn)(PdxGeom g, TdAABB &aabb);
typedef void __cdecl (*TdGeomDtorFn)(PdxGeom o);
typedef int __cdecl (*TdAABBTestFn)(PdxGeom o1, PdxGeom o2, const TdAABB &aabb2);
struct DECLSPEC_DRECORD TdGeomClass
{
public:
	int bytes;
	TdGetColliderFnFn collider;
	TdGetAABBFn aabb;
	TdAABBTestFn aabb_test;
	TdGeomDtorFn dtor;
};
typedef TdxSpace *PdxSpace;
struct DECLSPEC_DRECORD TdxTriMeshData
{
public:
	System::Byte unknown;
};
typedef TdxTriMeshData *PdxTriMeshData;
struct DECLSPEC_DRECORD TdxHeightfieldData
{
public:
	float m_fWidth;
	float m_fDepth;
	float m_fSampleWidth;
	float m_fSampleDepth;
	float m_fInvSampleWidth;
	float m_fInvSampleDepth;
	float m_fHalfWidth;
	float m_fHalfDepth;
	float m_fMinHeight;
	float m_fMaxHeight;
	float m_fThickness;
	float m_fScale;
	float m_fOffset;
	int m_nWidthSamples;
	int m_nDepthSamples;
	int m_bCopyHeightData;
	int m_bWrapMode;
	int m_nGetHeightMode;
	void *m_pHeightData;
	void *m_pUserData;
	TdContactGeom *m_contacts;
};
typedef TdxHeightfieldData *PdxHeightfieldData;
struct DECLSPEC_DRECORD TdxGeom
{
public:
	int _type;
	System::Byte Padding;
	int gflags;
	void *data;
	TdxBody *body;
	TdxGeom *body_next;
	TdxPosR *final_posr;
	TdxPosR *offset_posr;
	TdxGeom *next;
	PdxGeom *tome;
	TdxSpace *parent_space;
	TdAABB aabb;
	unsigned category_bits;
	unsigned collide_bits;
};
struct DECLSPEC_DRECORD TdxSpace
{
public:
	TdxGeom baseGeom;
	int count;
	TdxGeom *first;
	int cleanup;
	int current_index;
	TdxGeom *current_geom;
	int lock_count;
};
typedef int TJointParams;
//-- var, const, procedure ---------------------------------------------------
#define ODEDLL L"ode64s.dll"
extern "C" PdxJoint __cdecl dJointCreateFixed(const PdxWorld World, PdxJointGroup dJointGroupID);
extern "C" void __cdecl dJointSetFixed(const PdxJoint dJointID);
extern "C" PdxJoint __cdecl dJointCreatePlane2D(const PdxWorld World, PdxJointGroup dJointGroupID);
extern "C" void __cdecl dJointSetPlane2DXParam(const PdxJoint dJointID, const int parameter, const float Value);
extern "C" void __cdecl dJointSetPlane2DYParam(const PdxJoint dJointID, const int parameter, const float Value);
extern "C" void __cdecl dJointSetPlane2DAngleParam(const PdxJoint dJointID, const int parameter, const float Value);
extern "C" PdxJoint __cdecl dJointCreatePR(const PdxWorld World, PdxJointGroup dJointGroupID);
extern "C" void __cdecl dJointSetPRAnchor(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointSetPRAxis1(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetPRAxis1(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointSetPRAxis2(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetPRAxis2(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointSetPRParam(const PdxJoint dJointID, const int parameter, const float Value);
extern "C" float __cdecl dJointGetPRParam(const PdxJoint dJointID, int parameter);
extern "C" void __cdecl dJointAddPRTorque(const PdxJoint dJointID, float torque);
extern "C" PdxJoint __cdecl dJointCreatePiston(const PdxWorld World, PdxJointGroup dJointGroupID);
extern "C" void __cdecl dJointSetPistonAnchor(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetPistonAnchor(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointGetPistonAnchor2(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointSetPistonAxis(const PdxJoint dJointID, const float x, const float y, const float z);
extern "C" void __cdecl dJointGetPistonAxis(const PdxJoint dJointID, TdVector3 &result);
extern "C" void __cdecl dJointSetPistonParam(const PdxJoint dJointID, const int parameter, const float Value);
extern "C" float __cdecl dJointGetPistonParam(const PdxJoint dJointID, int parameter);
extern "C" void __cdecl dJointSetPistonAxisDelta(const PdxJoint dJointID, const float x, const float y, const float z, const float ax, const float ay, const float az);
extern "C" void __cdecl dJointAddPistonForce(const PdxJoint dJointID, float force);
extern "C" float __cdecl dJointGetPistonPosition(const PdxJoint dJointID);
extern "C" float __cdecl dJointGetPistonAngle(const PdxJoint dJointID);
extern "C" float __cdecl dJointGetPistonAngleRate(const PdxJoint dJointID);
extern "C" float __cdecl dJointGetPistonRate(const PdxJoint dJointID);
extern "C" PdxGeom __cdecl dCreateGeom(int classnum);
extern "C" void __cdecl dGeomDestroy(const PdxGeom geom);
extern "C" int __cdecl dCreateGeomClass(const TdGeomClass &classptr);
extern "C" int __cdecl dGeomGetClass(const PdxGeom geom);
extern "C" void * __cdecl dGeomGetClassData(PdxGeom o);
extern "C" PdxSpace __cdecl dGeomGetSpace(const PdxGeom geom);
extern "C" int __cdecl dGeomIsSpace(const PdxGeom geom);
extern "C" void __cdecl dGeomSetBody(const PdxGeom geom, PdxBody body);
extern "C" PdxBody __cdecl dGeomGetBody(const PdxGeom geom);
extern "C" void __cdecl dGeomSetPosition(const PdxGeom geom, const float x, const float y, const float z);
extern "C" PdVector3 __cdecl dGeomGetPosition(const PdxGeom geom);
extern "C" void __cdecl dGeomSetRotation(const PdxGeom geom, const TdMatrix3 &R);
extern "C" PdMatrix3 __cdecl dGeomGetRotation(const PdxGeom geom);
extern "C" void __cdecl dGeomSetQuaternion(const PdxGeom geom, const void *TdQuaternion);
extern "C" void __cdecl dGeomGetQuaternion(const PdxGeom geom, TdVector4 &result);
extern "C" void __cdecl dGeomCopyPosition(const PdxGeom geom, const TdVector3 &pos);
extern "C" void __cdecl dGeomCopyRotation(const PdxGeom geom, const TdMatrix3 &R);
extern "C" void __cdecl dGeomCopyQuaternion(const PdxGeom geom, const TdVector4 &quat);
extern "C" void __cdecl dGeomSetData(const PdxGeom geom, void * data);
extern "C" void * __cdecl dGeomGetData(const PdxGeom geom);
extern "C" void __cdecl dGeomEnable(const PdxGeom geom);
extern "C" void __cdecl dGeomDisable(const PdxGeom geom);
extern "C" int __cdecl dGeomIsEnabled(const PdxGeom geom);
extern "C" void __cdecl dGeomGetAABB(const PdxGeom geom, TdAABB &aabb);
extern "C" void __cdecl dGeomSetCategoryBits(const PdxGeom geom, unsigned bits);
extern "C" unsigned __cdecl dGeomGetCategoryBits(const PdxGeom geom);
extern "C" void __cdecl dGeomSetCollideBits(const PdxGeom geom, unsigned bits);
extern "C" unsigned __cdecl dGeomGetCollideBits(const PdxGeom geom);
extern "C" void __cdecl dGeomSetOffsetPosition(const PdxGeom geom, float x, float y, float z);
extern "C" PdVector3 __cdecl dGeomGetOffsetPosition(const PdxGeom geom);
extern "C" void __cdecl dGeomSetOffsetRotation(const PdxGeom geom, const TdMatrix3 &R);
extern "C" PdVector3 __cdecl dGeomGetOffsetRotation(const PdxGeom geom);
extern "C" void __cdecl dGeomSetOffsetQuaternion(const PdxGeom geom, const TdVector4 &q);
extern "C" void __cdecl dGeomGetOffsetQuaternion(const PdxGeom geom, TdVector4 &q);
extern "C" void __cdecl dGeomClearOffset(const PdxGeom geom);
extern "C" void __cdecl dGeomSetOffsetWorldPosition(const PdxGeom geom, float x, float y, float z);
extern "C" void __cdecl dGeomSetOffsetWorldRotation(const PdxGeom geom, const TdMatrix3 &R);
extern "C" void __cdecl dGeomSetOffsetWorldQuaternion(const PdxGeom geom, const TdVector4 &q);
extern "C" void __cdecl dGeomCopyOffsetPosition(const PdxGeom geom, TdVector3 &pos);
extern "C" void __cdecl dGeomCopyOffsetRotation(const PdxGeom geom, TdMatrix3 &R);
extern "C" void __cdecl dGeomIsOffset(const PdxGeom geom);
extern "C" PdxGeom __cdecl dCreateGeomTransform(const PdxSpace Space);
extern "C" void __cdecl dGeomTransformSetGeom(const PdxGeom geom, const PdxGeom obj);
extern "C" PdxGeom __cdecl dGeomTransformGetGeom(const PdxGeom geom);
extern "C" void __cdecl dGeomTransformSetInfo(const PdxGeom geom, int mode);
extern "C" int __cdecl dGeomTransformGetInfo(const PdxGeom geom);
extern "C" void __cdecl dGeomTransformSetCleanup(const PdxGeom geom, const int mode);
extern "C" int __cdecl dGeomTransformGetCleanup(const PdxGeom geom);
extern "C" PdxGeom __cdecl dCreateBox(const PdxSpace Space, const float lx, const float ly, const float lz);
extern "C" void __cdecl dGeomBoxGetLengths(const PdxGeom geom, TdVector3 &result);
extern "C" void __cdecl dGeomBoxSetLengths(const PdxGeom geom, const float lx, const float ly, const float lz);
extern "C" float __cdecl dGeomBoxPointDepth(const PdxGeom geom, const float x, const float y, const float z);
extern "C" PdxGeom __cdecl dCreateCylinder(const PdxSpace Space, float R, float lz);
extern "C" void __cdecl dGeomCylinderSetParams(const PdxGeom geom, float radius, float length);
extern "C" void __cdecl dGeomCylinderGetParams(const PdxGeom geom, float &radius, float &length);
extern "C" PdxGeom __cdecl dCreateCapsule(const PdxSpace Space, const float radius, const float length);
extern "C" void __cdecl dGeomCapsuleSetParams(const PdxGeom geom, const float radius, const float length);
extern "C" void __cdecl dGeomCapsuleGetParams(const PdxGeom geom, float &radius, float &length);
extern "C" float __cdecl dGeomCapsulePointDepth(const PdxGeom geom, const float x, const float y, const float z);
extern "C" PdxGeom __cdecl dCreatePlane(const PdxSpace Space, const float a, const float b, const float c, const float d);
extern "C" void __cdecl dGeomPlaneSetParams(const PdxGeom geom, const float a, const float b, const float c, const float d);
extern "C" void __cdecl dGeomPlaneGetParams(const PdxGeom geom, TdVector4 &result);
extern "C" float __cdecl dGeomPlanePointDepth(const PdxGeom geom, const float x, const float y, const float z);
extern "C" PdxGeom __cdecl dCreateSphere(const PdxSpace Space, const float radius);
extern "C" void __cdecl dGeomSphereSetRadius(const PdxGeom geom, const float radius);
extern "C" float __cdecl dGeomSphereGetRadius(const PdxGeom geom);
extern "C" float __cdecl dGeomSpherePointDepth(const PdxGeom geom, const float x, const float y, const float z);
extern "C" PdxGeom __cdecl dCreateConvex(const PdxSpace Space, PdReal _planes, unsigned _planecount, PdReal _points, unsigned _pointcount, const unsigned _polygons);
extern "C" void __cdecl dGeomSetConvex(const PdxGeom geom, PdReal _planes, unsigned _planecount, PdReal _points, unsigned _pointcount, const unsigned _polygons);
extern "C" PdxGeom __cdecl dCreateHeightfield(const PdxSpace Space, PdxHeightfieldData data, int bPlaceable);
extern "C" PdxHeightfieldData __cdecl dGeomHeightfieldDataCreate(void);
extern "C" void __cdecl dGeomHeightfieldDataDestroy(PdxHeightfieldData data);
extern "C" void __cdecl dGeomHeightfieldSetHeightfieldData(const PdxGeom geom, PdxHeightfieldData data);
extern "C" PdxHeightfieldData __cdecl dGeomHeightfieldGetHeightfieldData(const PdxGeom geom);
extern "C" float __cdecl dGeomHeightfieldDataSetBounds(PdxHeightfieldData data, float minHeight, float MaxHeight);
extern "C" PdxGeom __cdecl dCreateRay(const PdxSpace Space, float length);
extern "C" void __cdecl dGeomRaySet(const PdxGeom geom, float px, float py, float pz, float dx, float dy, float dz);
extern "C" void __cdecl dGeomRayGet(const PdxGeom geom, TdVector3 &start, TdVector3 &dir);
extern "C" void __cdecl dGeomRaySetLength(const PdxGeom geom, float length);
extern "C" float __cdecl dGeomRayGetLength(const PdxGeom geom);
extern "C" void __cdecl dGeomRaySetParams(const PdxGeom geom, int FirstContact, int BackfacCull);
extern "C" void __cdecl dGeomRayGetParams(const PdxGeom geom, int &FirstContact, int &BackfacCull);
extern "C" void __cdecl dGeomRaySetClosestHit(const PdxGeom geom, int closestHit);
extern "C" int __cdecl dGeomRayGetClosestHit(const PdxGeom geom);
extern "C" PdxGeom __cdecl dCreateTriMesh(const PdxSpace Space, PdxTriMeshData data, TdTriCallback callback, TdTriArrayCallback ArrayCallback, TdTriRayCallback RayCallback);