Source/Physics.ODEImport.pas


// Fixed
function dJointCreateFixed(const World: PdxWorld; dJointGroupID: TdJointGroupID)
  : TdJointID; cdecl; external ODEDLL;
procedure dJointSetFixed(const dJointID: TdJointID); cdecl; external ODEDLL;

// Plane2D
function dJointCreatePlane2D(const World: PdxWorld;
  dJointGroupID: TdJointGroupID): TdJointID; cdecl; external ODEDLL;
procedure dJointSetPlane2DXParam(const dJointID: TdJointID;
  const parameter: Integer; const Value: TdReal); cdecl; external ODEDLL;
procedure dJointSetPlane2DYParam(const dJointID: TdJointID;
  const parameter: Integer; const Value: TdReal); cdecl; external ODEDLL;
procedure dJointSetPlane2DAngleParam(const dJointID: TdJointID;
  const parameter: Integer; const Value: TdReal); cdecl; external ODEDLL;

// PR
function dJointCreatePR(const World: PdxWorld; dJointGroupID: TdJointGroupID)
  : TdJointID; cdecl; external ODEDLL;
procedure dJointSetPRAnchor(const dJointID: TdJointID; const x, y, z: TdReal);
  cdecl; external ODEDLL;
procedure dJointSetPRAxis1(const dJointID: TdJointID; const x, y, z: TdReal);
  cdecl; external ODEDLL;
procedure dJointGetPRAxis1(const dJointID: TdJointID; var result: TdVector3);
  cdecl; external ODEDLL;
procedure dJointSetPRAxis2(const dJointID: TdJointID; const x, y, z: TdReal);
  cdecl; external ODEDLL;
procedure dJointGetPRAxis2(const dJointID: TdJointID; var result: TdVector3);
  cdecl; external ODEDLL;
procedure dJointSetPRParam(const dJointID: TdJointID;
  const parameter: TJointParams; const Value: TdReal); cdecl; external ODEDLL;
function dJointGetPRParam(const dJointID: TdJointID; parameter: Integer)
  : TdReal; cdecl; external ODEDLL;
procedure dJointAddPRTorque(const dJointID: TdJointID; torque: TdReal); cdecl;
  external ODEDLL;

// Piston
function dJointCreatePiston(const World: PdxWorld;
  dJointGroupID: TdJointGroupID): TdJointID; cdecl; external ODEDLL;
procedure dJointSetPistonAnchor(const dJointID: TdJointID;
  const x, y, z: TdReal); cdecl; external ODEDLL;
procedure dJointGetPistonAnchor(const dJointID: TdJointID;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointGetPistonAnchor2(const dJointID: TdJointID;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dJointSetPistonAxis(const dJointID: TdJointID; const x, y, z: TdReal);
  cdecl; external ODEDLL;
procedure dJointGetPistonAxis(const dJointID: TdJointID; var result: TdVector3);
  cdecl; external ODEDLL;
procedure dJointSetPistonParam(const dJointID: TdJointID;
  const parameter: TJointParams; const Value: TdReal); cdecl; external ODEDLL;
function dJointGetPistonParam(const dJointID: TdJointID; parameter: Integer)
  : TdReal; cdecl; external ODEDLL;
procedure dJointSetPistonAxisDelta(const dJointID: TdJointID;
  const x, y, z, ax, ay, az: TdReal); cdecl; external ODEDLL;
procedure dJointAddPistonForce(const dJointID: TdJointID; force: TdReal); cdecl;
  external ODEDLL;
function dJointGetPistonPosition(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
function dJointGetPistonAngle(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
function dJointGetPistonAngleRate(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;
function dJointGetPistonRate(const dJointID: TdJointID): TdReal; cdecl;
  external ODEDLL;

// ----- dGeom -----
function dCreateGeom(classnum: Integer): PdxGeom; cdecl; external ODEDLL;
procedure dGeomDestroy(const geom: PdxGeom); cdecl; external ODEDLL;

function dCreateGeomClass(const classptr: TdGeomClass): Integer; cdecl;
  external ODEDLL;
function dGeomGetClass(const geom: PdxGeom): Integer; cdecl; external ODEDLL;
function dGeomGetClassData(o: PdxGeom): pointer; cdecl; external ODEDLL;

function dGeomGetSpace(const geom: PdxGeom): PdxSpace; cdecl; external ODEDLL;
function dGeomIsSpace(const geom: PdxGeom): Integer; cdecl; external ODEDLL;
procedure dGeomSetBody(const geom: PdxGeom; body: PdxBody); cdecl;
  external ODEDLL;
function dGeomGetBody(const geom: PdxGeom): PdxBody; cdecl; external ODEDLL;

procedure dGeomSetPosition(const geom: PdxGeom; const x, y, z: TdReal); cdecl;
  external ODEDLL;
function dGeomGetPosition(const geom: PdxGeom): PdVector3; cdecl;
  external ODEDLL;
procedure dGeomSetRotation(const geom: PdxGeom; const R: TdMatrix3); cdecl;
  external ODEDLL;
function dGeomGetRotation(const geom: PdxGeom): PdMatrix3; cdecl;
  external ODEDLL;
procedure dGeomSetQuaternion(const geom: PdxGeom; const TdQuaternion); cdecl;
  external ODEDLL;
procedure dGeomGetQuaternion(const geom: PdxGeom; var result: TdQuaternion);
  cdecl; external ODEDLL;
procedure dGeomCopyPosition(const geom: PdxGeom; const pos: TdVector3); cdecl;
  external ODEDLL;
procedure dGeomCopyRotation(const geom: PdxGeom; const R: TdMatrix3); cdecl;
  external ODEDLL;
procedure dGeomCopyQuaternion(const geom: PdxGeom; const quat: TdQuaternion);
  cdecl; external ODEDLL;

procedure dGeomSetData(const geom: PdxGeom; data: pointer); cdecl;
  external ODEDLL;
function dGeomGetData(const geom: PdxGeom): pointer; cdecl; external ODEDLL;
procedure dGeomEnable(const geom: PdxGeom); cdecl; external ODEDLL;
procedure dGeomDisable(const geom: PdxGeom); cdecl; external ODEDLL;
function dGeomIsEnabled(const geom: PdxGeom): Integer; cdecl; external ODEDLL;
procedure dGeomGetAABB(const geom: PdxGeom; var aabb: TdAABB); cdecl;
  external ODEDLL;
procedure dGeomSetCategoryBits(const geom: PdxGeom; bits: cardinal); cdecl;
  external ODEDLL;
function dGeomGetCategoryBits(const geom: PdxGeom): cardinal; cdecl;
  external ODEDLL;
procedure dGeomSetCollideBits(const geom: PdxGeom; bits: cardinal); cdecl;
  external ODEDLL;
function dGeomGetCollideBits(const geom: PdxGeom): cardinal; cdecl;
  external ODEDLL;

procedure dGeomSetOffsetPosition(const geom: PdxGeom; x, y, z: TdReal); cdecl;
  external ODEDLL;
function dGeomGetOffsetPosition(const geom: PdxGeom): PdVector3; cdecl;
  external ODEDLL;
procedure dGeomSetOffsetRotation(const geom: PdxGeom; R: TdMatrix3); cdecl;
  external ODEDLL;
function dGeomGetOffsetRotation(const geom: PdxGeom): PdVector3; cdecl;
  external ODEDLL;
procedure dGeomSetOffsetQuaternion(const geom: PdxGeom; const q: TdQuaternion);
  cdecl; external ODEDLL;
procedure dGeomGetOffsetQuaternion(const geom: PdxGeom; var q: TdQuaternion);
  cdecl; external ODEDLL;
procedure dGeomClearOffset(const geom: PdxGeom); cdecl; external ODEDLL;
procedure dGeomSetOffsetWorldPosition(const geom: PdxGeom; x, y, z: TdReal);
  cdecl; external ODEDLL;
procedure dGeomSetOffsetWorldRotation(const geom: PdxGeom; R: TdMatrix3); cdecl;
  external ODEDLL;
procedure dGeomSetOffsetWorldQuaternion(const geom: PdxGeom;
  const q: TdQuaternion); cdecl; external ODEDLL;
procedure dGeomCopyOffsetPosition(const geom: PdxGeom; var pos: TdVector3);
  cdecl; external ODEDLL;
procedure dGeomCopyOffsetRotation(const geom: PdxGeom; var R: TdMatrix3); cdecl;
  external ODEDLL;
procedure dGeomIsOffset(const geom: PdxGeom); cdecl; external ODEDLL;

// Transform
function dCreateGeomTransform(const Space: PdxSpace): PdxGeom; cdecl;
  external ODEDLL;
procedure dGeomTransformSetGeom(const geom, obj: PdxGeom); cdecl;
  external ODEDLL;
function dGeomTransformGetGeom(const geom: PdxGeom): PdxGeom; cdecl;
  external ODEDLL;
procedure dGeomTransformSetInfo(const geom: PdxGeom; mode: Integer); cdecl;
  external ODEDLL;
function dGeomTransformGetInfo(const geom: PdxGeom): Integer; cdecl;
  external ODEDLL;
procedure dGeomTransformSetCleanup(const geom: PdxGeom; const mode: Integer);
  cdecl; external ODEDLL;
function dGeomTransformGetCleanup(const geom: PdxGeom): Integer; cdecl;
  external ODEDLL;

// Box
function dCreateBox(const Space: PdxSpace; const lx, ly, lz: TdReal): PdxGeom;
  cdecl; external ODEDLL;
procedure dGeomBoxGetLengths(const geom: PdxGeom; var result: TdVector3); cdecl;
  external ODEDLL;
procedure dGeomBoxSetLengths(const geom: PdxGeom; const lx, ly, lz: TdReal);
  cdecl; external ODEDLL;
function dGeomBoxPointDepth(const geom: PdxGeom; const x, y, z: TdReal): TdReal;
  cdecl; external ODEDLL;

// dCylinder (not a capped cylinder).
function dCreateCylinder(const Space: PdxSpace; R, lz: TdReal): PdxGeom; cdecl;
  external ODEDLL;
procedure dGeomCylinderSetParams(const geom: PdxGeom; radius, length: TdReal);
  cdecl; external ODEDLL;
procedure dGeomCylinderGetParams(const geom: PdxGeom;
  var radius, length: TdReal); cdecl; external ODEDLL;

// dCapsule (a capped cylinder).
function dCreateCapsule(const Space: PdxSpace; const radius, length: TdReal)
  : PdxGeom; cdecl; external ODEDLL;
procedure dGeomCapsuleSetParams(const geom: PdxGeom;
  const radius, length: TdReal); cdecl; external ODEDLL;
procedure dGeomCapsuleGetParams(const geom: PdxGeom;
  var radius, length: TdReal); cdecl; external ODEDLL;
function dGeomCapsulePointDepth(const geom: PdxGeom; const x, y, z: TdReal)
  : TdReal; cdecl; external ODEDLL;

// Plane
function dCreatePlane(const Space: PdxSpace; const a, b, c, d: TdReal): PdxGeom;
  cdecl; external ODEDLL;
procedure dGeomPlaneSetParams(const geom: PdxGeom; const a, b, c, d: TdReal);
  cdecl; external ODEDLL;
procedure dGeomPlaneGetParams(const geom: PdxGeom; var result: TdVector4);
  cdecl; external ODEDLL;
function dGeomPlanePointDepth(const geom: PdxGeom; const x, y, z: TdReal)
  : TdReal; cdecl; external ODEDLL;

// Sphere
function dCreateSphere(const Space: PdxSpace; const radius: TdReal): PdxGeom;
  cdecl; external ODEDLL;
procedure dGeomSphereSetRadius(const geom: PdxGeom; const radius: TdReal);
  cdecl; external ODEDLL;
function dGeomSphereGetRadius(const geom: PdxGeom): TdReal; cdecl;
  external ODEDLL;
function dGeomSpherePointDepth(const geom: PdxGeom; const x, y, z: TdReal)
  : TdReal; cdecl; external ODEDLL;

// Convex
function dCreateConvex(const Space: PdxSpace; _planes: PdReal;
  _planecount: longword; _points: PdReal; _pointcount: longword;
  const _polygons: longword): PdxGeom; cdecl; external ODEDLL;
procedure dGeomSetConvex(const geom: PdxGeom; _planes: PdReal;
  _planecount: longword; _points: PdReal; _pointcount: longword;
  const _polygons: longword); cdecl; external ODEDLL;

// Heightfield  (incomplete)
function dCreateHeightfield(const Space: PdxSpace; data: PdxHeightfieldData;
  bPlaceable: Integer): PdxGeom; cdecl; external ODEDLL;
function dGeomHeightfieldDataCreate: PdxHeightfieldData; cdecl; external ODEDLL;
procedure dGeomHeightfieldDataDestroy(data: PdxHeightfieldData); cdecl;
  external ODEDLL;
procedure dGeomHeightfieldSetHeightfieldData(const geom: PdxGeom;
  data: PdxHeightfieldData); cdecl; external ODEDLL;
function dGeomHeightfieldGetHeightfieldData(const geom: PdxGeom)
  : PdxHeightfieldData; cdecl; external ODEDLL;
function dGeomHeightfieldDataSetBounds(data: PdxHeightfieldData;
  minHeight, MaxHeight: TdReal): TdReal; cdecl; external ODEDLL;

// dRay
function dCreateRay(const Space: PdxSpace; length: TdReal): PdxGeom; cdecl;
  external ODEDLL;
procedure dGeomRaySet(const geom: PdxGeom; px, py, pz, dx, dy, dz: TdReal);
  cdecl; external ODEDLL;
procedure dGeomRayGet(const geom: PdxGeom; var start, dir: TdVector3); cdecl;
  external ODEDLL;
procedure dGeomRaySetLength(const geom: PdxGeom; length: TdReal); cdecl;
  external ODEDLL;
function dGeomRayGetLength(const geom: PdxGeom): TdReal; cdecl; external ODEDLL;
procedure dGeomRaySetParams(const geom: PdxGeom;
  FirstContact, BackfacCull: Integer); cdecl; external ODEDLL;
procedure dGeomRayGetParams(const geom: PdxGeom;
  var FirstContact, BackfacCull: Integer); cdecl; external ODEDLL;
procedure dGeomRaySetClosestHit(const geom: PdxGeom; closestHit: Integer);
  cdecl; external ODEDLL;
function dGeomRayGetClosestHit(const geom: PdxGeom): Integer; cdecl;
  external ODEDLL;

// TriMesh
function dCreateTriMesh(const Space: PdxSpace; data: PdxTriMeshData;
  callback: TdTriCallback; ArrayCallback: TdTriArrayCallback;
  RayCallback: TdTriRayCallback): PdxGeom; cdecl; external ODEDLL;
